[UPD] Move datasetScripts.js to scripts folder

--- a/app/templates/one_dataset.html
+++ b/app/templates/one_dataset.html
@@ -91,6 +91,6 @@
     </div>
 </div>
 
-<script src="{{ url_for('static', filename='datasetScripts.js') }}"></script>
+<script src="{{ url_for('static', filename='scripts/datasetScripts.js') }}"></script>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 {% endblock %}
