--- a/app/templates/add_dataset.html
+++ b/app/templates/add_dataset.html
@@ -38,5 +38,5 @@
 
 {% block extra %}
 
-<script src="{{ url_for('static', filename='datasetScripts.js') }}"></script>
+<script src="{{ url_for('static', filename='scripts/datasetScripts.js') }}"></script>
 {% endblock %}
