--- a/app/templates/edit_dataset.html
+++ b/app/templates/edit_dataset.html
@@ -38,7 +38,7 @@
     </div>
 </div>
 
-<script src="{{ url_for('static', filename='datasetScripts.js') }}"></script>
+<script src="{{ url_for('static', filename='scripts/datasetScripts.js') }}"></script>
 {% endblock %}
 
 {% block extra %}
