[ADD] Add search by name on server's side

--- a/app/templates/all_datasets.html
+++ b/app/templates/all_datasets.html
@@ -10,7 +10,7 @@
     <form id="filter-form">
         <div class="ui text container">
             <div class="ui transparent left icon input searchbar">
-                <input type="text" name="filter-name" placeholder="Поиск...">
+                <input type="text" name="name" placeholder="Поиск...">
                 <i class="search icon"></i>
             </div>
             <div class="ui divider"></div>
@@ -39,4 +39,5 @@
 <a class="circular ui icon button massive secondary add-button" href="/datasets/add/">
     <i class="icon plus"></i>
 </a>
+<script src="../static/scripts/filterScripts.js"></script>
 {% endblock %}
