[FIX] Rename button for submitting filters

--- a/app/templates/all_datasets.html
+++ b/app/templates/all_datasets.html
@@ -17,7 +17,7 @@
         </div>
     </form>
 
-    <button id="fiter-button" class="ui secondary button" form="filter-form">Подтвердить</button>
+    <button id="fiter-button" class="ui secondary button" form="filter-form">Применить фильтры</button>
     <div class="ui divider"></div>
 
     <div class="ui three cards cards-container" id="cards-container">
