--- a/app/templates/all_datasets.html
+++ b/app/templates/all_datasets.html
@@ -7,12 +7,85 @@
 {% block content %}
 <div class="ui container padded-container">
     <form id="filter-form">
+        <!-- name -->
         <div class="ui text container">
             <div class="ui transparent left icon input searchbar">
                 <input type="text" name="name" placeholder="Поиск...">
                 <i class="search icon"></i>
             </div>
             <div class="ui divider"></div>
+        </div>
+
+        <div class="ui two column stackable grid">
+
+            <!-- dataset size -->
+            <div class="row">
+                <div class="column">
+                    <div class="ui form">
+                        <h5>Размер датасета</h5>
+                        <div class="three fields">
+                            <div class="field">
+                                <input type="number" placeholder="От" min="0" name="size-from">
+                            </div>
+                            <div class="field">
+                                <input type="number" placeholder="До" min="0" name="size-to">
+                            </div>
+                            <div class="field">
+                                <select class="ui dropdown" name="size-sort">
+                                    <option>-</option>
+                                    <option>По возрастанию</option>
+                                    <option>По убыванию</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- row size -->
+            <div class="column">
+                <div class="ui form">
+                    <h5>Количество строк</h5>
+                    <div class="three fields">
+                        <div class="field">
+                            <input type="number" placeholder="От" min="0" name="row-size-from">
+                        </div>
+                        <div class="field">
+                            <input type="number" placeholder="До" min="0" name="row-size-to">
+                        </div>
+                        <div class="field">
+                            <select class="ui dropdown" name="row-size-sort">
+                                <option>-</option>
+                                <option>По возрастанию</option>
+                                <option>По убыванию</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- columns size -->
+            <div class="column">
+                <div class="ui form">
+                    <h5>Количество столбцов</h5>
+                    <div class="three fields">
+                        <div class="field">
+                            <input type="number" placeholder="От" min="0" name="column-size-from">
+                        </div>
+                        <div class="field">
+                            <input type="number" placeholder="До" min="0" name="column-size-to">
+                        </div>
+                        <div class="field">
+                            <select class="ui dropdown" name="column-size-sort">
+                                <option>-</option>
+                                <option>По возрастанию</option>
+                                <option>По убыванию</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </form>
 
