--- a/app/templates/all_datasets.html
+++ b/app/templates/all_datasets.html
@@ -29,13 +29,13 @@
                     <div class="row">
                         <div class="column">
                             <div class="ui form">
-                                <h5>Размер датасета</h5>
+                                <h5>Размер датасета, кбайт</h5>
                                 <div class="three fields">
                                     <div class="field">
-                                        <input type="number" placeholder="От" min="0" name="size-from">
+                                        <input type="number" placeholder="От" min="0" step="0.01" name="size-from">
                                     </div>
                                     <div class="field">
-                                        <input type="number" placeholder="До" min="0" name="size-to">
+                                        <input type="number" placeholder="До" min="0" step="0.01" name="size-to">
                                     </div>
                                     <div class="field">
                                         <select class="ui dropdown" name="size-sort">
