--- a/app/templates/all_datasets.html
+++ b/app/templates/all_datasets.html
@@ -92,6 +92,31 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- creation date -->
+                    <div class="column">
+                        <div class="ui form">
+                            <h5>Дата добавления:</h5>
+                            <div class="inline three fields">
+                                <div class="field">
+                                    От:
+                                    <input type="date" id="creation-date-from">
+                                </div>
+                                <div class="field">
+                                    До:
+                                    <input type="date" id="creation-date-to">
+                                </div>
+                                <div class="field">
+                                    <br>
+                                    <select class="ui dropdown" name="creation-date-sort">
+                                        <option>-</option>
+                                        <option>По возрастанию</option>
+                                        <option>По убыванию</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
