--- a/app/templates/all_datasets.html
+++ b/app/templates/all_datasets.html
@@ -121,7 +121,7 @@
                     <!-- modification date -->
                     <div class="column">
                         <div class="ui form">
-                            <h5>Дата добавления:</h5>
+                            <h5>Дата изменения:</h5>
                             <div class="inline three fields">
                                 <div class="field">
                                     От:
