--- a/app/templates/all_datasets.html
+++ b/app/templates/all_datasets.html
@@ -125,15 +125,15 @@
                             <div class="inline three fields">
                                 <div class="field">
                                     От:
-                                    <input type="date" id="modyfy-date-from">
+                                    <input type="date" id="modify-date-from">
                                 </div>
                                 <div class="field">
                                     До:
-                                    <input type="date" id="modyfy-date-to">
+                                    <input type="date" id="modify-date-to">
                                 </div>
                                 <div class="field">
                                     <br>
-                                    <select class="ui dropdown" name="modyfy-date-sort">
+                                    <select class="ui dropdown" name="modify-date-sort">
                                         <option>-</option>
                                         <option>По возрастанию</option>
                                         <option>По убыванию</option>
