[FIX] id -> name if date filters

--- a/app/templates/all_datasets.html
+++ b/app/templates/all_datasets.html
@@ -100,11 +100,11 @@
                             <div class="inline three fields">
                                 <div class="field">
                                     От:
-                                    <input type="date" id="creation-date-from">
+                                    <input type="date" name="creation-date-from">
                                 </div>
                                 <div class="field">
                                     До:
-                                    <input type="date" id="creation-date-to">
+                                    <input type="date" name="creation-date-to">
                                 </div>
                                 <div class="field">
                                     <br>
@@ -125,11 +125,11 @@
                             <div class="inline three fields">
                                 <div class="field">
                                     От:
-                                    <input type="date" id="modify-date-from">
+                                    <input type="date" name="modify-date-from">
                                 </div>
                                 <div class="field">
                                     До:
-                                    <input type="date" id="modify-date-to">
+                                    <input type="date" name="modify-date-to">
                                 </div>
                                 <div class="field">
                                     <br>
