--- a/app/templates/all_datasets.html
+++ b/app/templates/all_datasets.html
@@ -96,8 +96,8 @@
                     <!-- creation date -->
                     <div class="column">
                         <div class="ui form">
-                            <h5>Дата добавления:</h5>
-                            <div class="inline three fields">
+                            <h5>Дата добавления</h5>
+                            <div class=" three fields">
                                 <div class="field">
                                     От:
                                     <input type="date" name="creation-date-from">
@@ -121,8 +121,8 @@
                     <!-- modification date -->
                     <div class="column">
                         <div class="ui form">
-                            <h5>Дата изменения:</h5>
-                            <div class="inline three fields">
+                            <h5>Дата изменения</h5>
+                            <div class="three fields">
                                 <div class="field">
                                     От:
                                     <input type="date" name="modify-date-from">
