--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,5 +1,17 @@
+/* Hide scrollbar for Chrome, Safari, and Opera */
 ::-webkit-scrollbar {
     width: 0;
+    display: none;
+}
+
+/* Hide scrollbar for Firefox */
+html {
+    scrollbar-width: none;
+}
+
+/* Hide scrollbar for IE/Edge (if needed) */
+body {
+    -ms-overflow-style: none;
 }
 
 .logo {
@@ -53,7 +65,7 @@
     margin: 20px 0;
     background: white;
     border-radius: 4px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .table-container {
@@ -85,6 +97,22 @@
     background: #f8f9fa;
 }
 
-#fiter-button {
+.ui.sticky.menu {
+    /* Начальное состояние (до скролла) */
+    background-color: rgba(255, 255, 255, 0); /* Полупрозрачный белый */
+
+    /* Анимации */
+    transition: all 0.4s ease, background-color 0.7s ease !important;
+}
+
+.ui.sticky.fixed.menu {
+    background-color: rgba(255, 255, 255, 1); /* Полная непрозрачность */
+}
+
+#cards-container {
+  scroll-margin-top: 85px; /* Высота вашего меню + отступ */
+}
+
+#filter-button {
     margin-top: 1em;
 }
