--- a/app/templates/all_datasets.html
+++ b/app/templates/all_datasets.html
@@ -150,7 +150,7 @@
 
     </form>
 
-    <button id="fiter-button" class="ui secondary button" form="filter-form">Применить фильтры</button>
+    <button id="filter-button" class="ui secondary button" form="filter-form">Применить фильтры</button>
     <div class="ui divider"></div>
 
     <div class="ui three cards cards-container" id="cards-container">
