--- a/app/templates/all_datasets.html
+++ b/app/templates/all_datasets.html
@@ -38,10 +38,10 @@
                                         <input type="number" placeholder="До" min="0" step="0.01" name="size-to">
                                     </div>
                                     <div class="field">
-                                        <select class="ui dropdown" name="size-sort">
-                                            <option>-</option>
-                                            <option>По возрастанию</option>
-                                            <option>По убыванию</option>
+                                        <select class="ui dropdown" name="size-sort" id="size-sort">
+                                            <option value="">-</option>
+                                            <option value="asc">По возрастанию</option>
+                                            <option value="desc">По убыванию</option>
                                         </select>
                                     </div>
                                 </div>
@@ -61,10 +61,10 @@
                                     <input type="number" placeholder="До" min="0" name="row-size-to">
                                 </div>
                                 <div class="field">
-                                    <select class="ui dropdown" name="row-size-sort">
-                                        <option>-</option>
-                                        <option>По возрастанию</option>
-                                        <option>По убыванию</option>
+                                    <select class="ui dropdown" name="row-size-sort" id="row-size-sort">
+                                        <option value="">-</option>
+                                        <option value="asc">По возрастанию</option>
+                                        <option value="desc">По убыванию</option>
                                     </select>
                                 </div>
                             </div>
@@ -83,10 +83,10 @@
                                     <input type="number" placeholder="До" min="0" name="column-size-to">
                                 </div>
                                 <div class="field">
-                                    <select class="ui dropdown" name="column-size-sort">
-                                        <option>-</option>
-                                        <option>По возрастанию</option>
-                                        <option>По убыванию</option>
+                                    <select class="ui dropdown" name="column-size-sort" id="column-size-sort">
+                                        <option value="">-</option>
+                                        <option value="asc">По возрастанию</option>
+                                        <option value="desc">По убыванию</option>
                                     </select>
                                 </div>
                             </div>
@@ -108,10 +108,10 @@
                                 </div>
                                 <div class="field">
                                     <br>
-                                    <select class="ui dropdown" name="creation-date-sort">
-                                        <option>-</option>
-                                        <option>По возрастанию</option>
-                                        <option>По убыванию</option>
+                                    <select class="ui dropdown" name="creation-date-sort" id="creation-date-sort">
+                                        <option value="">-</option>
+                                        <option value="asc">По возрастанию</option>
+                                        <option value="desc">По убыванию</option>
                                     </select>
                                 </div>
                             </div>
@@ -133,16 +133,16 @@
                                 </div>
                                 <div class="field">
                                     <br>
-                                    <select class="ui dropdown" name="modify-date-sort">
-                                        <option>-</option>
-                                        <option>По возрастанию</option>
-                                        <option>По убыванию</option>
+                                    <select class="ui dropdown" name="modify-date-sort" id="modify-date-sort">
+                                        <option value="">-</option>
+                                        <option value="asc">По возрастанию</option>
+                                        <option value="desc">По убыванию</option>
                                     </select>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    
+
                 </div>
             </div>
 
