--- a/app/templates/one_dataset.html
+++ b/app/templates/one_dataset.html
@@ -64,6 +64,11 @@
             {% if dataset_info.dataset_columns > max_cols_num %}
             <h3>{{ 'В датасете слишком много столбцов (' ~ dataset_info.dataset_columns ~ '). В таблице отобразятся первые ' ~ max_cols_num}}</h3>
             {% endif %}
+            <colgroup>
+                {% for _ in headers %}
+                <col style="min-width: 120px; width: auto">
+                {% endfor %}
+            </colgroup>
             <thead>
                 <tr>
                     {% for header in headers %}
@@ -72,12 +77,28 @@
                 </tr>
             </thead>
             <tbody>
+                <!-- Image row -->
                 <tr class="image-row">
-                    {% for header in headers %}
-                    <td></td>
+                    {% set lst_ind = namespace(count=0) %}
+                    {% if dataset_info.dataset_columns > max_cols_num %}
+                        {% set col_lim = max_cols_num %}
+                    {% else %}
+                        {% set col_lim = dataset_info.dataset_columns %}
+                    {% endif %}
+
+                    {% for col_ind in range(col_lim) %}
+                        <td>
+                            <div class="image-cell">
+                                {% if lst_ind.count < plots|length and col_ind == plots[lst_ind.count].name|int %}
+                                    {{ plots[lst_ind.count].data|safe }}
+                                    {% set lst_ind.count = lst_ind.count + 1 %}
+                                {% endif %}
+                            </div>
+                        </td>
                     {% endfor %}
                 </tr>
 
+                <!-- Regular rows -->
                 {% for row in rows %}
                 <tr>
                     {% for cell in row %}
