[FIX]: minor changes

--- a/app/templates/auth/profile.html
+++ b/app/templates/auth/profile.html
@@ -2,7 +2,7 @@
 
 {% block menu %}
     <a class="header item" href="{{ url_for('datasets.get_datasets') }}">
-        <i class="icon"></i> Главная
+        Главная
     </a>
 {% endblock %}
 
