--- a/app/templates/auth/profile.html
+++ b/app/templates/auth/profile.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block menu %}
-    <a class="header item" href="{{ url_for('datasets.get_datasets') }}">
-        Главная
-    </a>
+<a class="header item" href="{{ url_for('datasets.get_datasets') }}">
+    Главная
+</a>
 {% endblock %}
 
 {% block content %}
@@ -19,10 +19,11 @@
     <form class="ui form large" method="POST" action="{{ url_for('auth.profile') }}" autocomplete="off">
         {# Flask-WTF CSRF token, if you were using it. For now, standard form. #}
         {# {{ form.csrf_token }} #}
-        
+
         <div class="field">
             <label for="username">Имя пользователя</label>
-            <input type="text" id="username" name="username" value="{{ request.form.get('username', current_user.username) }}" required maxlength="50">
+            <input type="text" id="username" name="username"
+                   value="{{ request.form.get('username', current_user.username) }}" required maxlength="50">
             <div class="ui pointing label basic">
                 Это имя будет отображаться другим пользователям.
             </div>
@@ -31,20 +32,22 @@
         <div class="field">
             <label for="login">Логин</label>
             <div class="ui input disabled">
-                 <input type="text" id="login" name="login" value="{{ current_user.login }}" readonly>
+                <input type="text" id="login" name="login" value="{{ current_user.login }}" readonly>
             </div>
         </div>
 
         <h4 class="ui dividing header">Изменить пароль</h4>
         <p>Оставьте поля пустыми, если не хотите менять пароль.</p>
-        
+
         <div class="field">
             <label for="new_password">Новый пароль</label>
-            <input type="password" id="new_password" name="new_password" minlength="6" autocomplete="new-password" placeholder="Минимум 6 символов">
+            <input type="password" id="new_password" name="new_password" minlength="6" autocomplete="new-password"
+                   placeholder="Минимум 6 символов">
         </div>
         <div class="field">
             <label for="confirm_new_password">Подтвердите новый пароль</label>
-            <input type="password" id="confirm_new_password" name="confirm_new_password" minlength="6" autocomplete="new-password">
+            <input type="password" id="confirm_new_password" name="confirm_new_password" minlength="6"
+                   autocomplete="new-password">
         </div>
 
         <button class="ui secondary button" type="submit">
@@ -57,26 +60,60 @@
 
     <div class="ui divider" style="margin-top: 2em; margin-bottom: 2em;"></div>
 
-    <h3 class="ui header">
-        <i class="chart line icon"></i>
-        <div class="content">
-            Статистика пользователя
-        </div>
-    </h3>
+    {% if current_user.is_admin %}
+    <h3 class="ui header">Инструменты</h3>
+
+    <h4 class="ui header">Импорт данных</h4>
+
+    <div class="ui segment">
+        <form id="upload-form" class="ui form">
+            <div class="ui container" style="padding: 20px">
+                <input type="file" name="backup" id="zipUpload" accept=".zip" hidden>
+                <label for="zipUpload" class="ui huge fluid basic secondary button">
+                    <i class="file csv outline icon"></i>
+                    <span id="button-label">Загрузить ZIP файл</span>
+                </label>
+                <div id="file-error" class="ui basic red pointing prompt label" style="display: none;">
+                    Загрузите ZIP файл
+                </div>
+            </div>
+        </form>
+
+        <button id="upload-button" class="ui secondary button" form="upload-form">
+            <i class="upload icon"></i> Импорт
+        </button>
+    </div>
+
+    <h4 class="ui header">Экспорт данных</h4>
+
+    <div class="ui segment">
+        <a type="submit" class="ui secondary button" href="/datasets/export">
+            <i class="save icon"></i> Экспорт
+        </a>
+    </div>
+
+    <div class="ui divider" style="margin-top: 2em; margin-bottom: 2em;"></div>
+    {% endif %}
+
+    <h3 class="ui header">Статистика пользователя</h3>
     <div class="ui segment">
         <div class="ui list">
             <div class="item">
                 <i class="calendar plus outline icon"></i>
                 <div class="content">
                     <div class="header">Дата создания аккаунта</div>
-                    <div class="description">{{ current_user.accountCreationDate.strftime('%d %B %Y, %H:%M:%S UTC') if current_user.accountCreationDate else 'N/A' }}</div>
+                    <div class="description">{{ current_user.accountCreationDate.strftime('%d %B %Y, %H:%M:%S UTC') if
+                        current_user.accountCreationDate else 'N/A' }}
+                    </div>
                 </div>
             </div>
             <div class="item">
                 <i class="calendar check outline icon"></i>
                 <div class="content">
                     <div class="header">Дата последнего изменения аккаунта</div>
-                    <div class="description">{{ current_user.lastAccountModificationDate.strftime('%d %B %Y, %H:%M:%S UTC') if current_user.lastAccountModificationDate else 'N/A' }}</div>
+                    <div class="description">{{ current_user.lastAccountModificationDate.strftime('%d %B %Y, %H:%M:%S
+                        UTC') if current_user.lastAccountModificationDate else 'N/A' }}
+                    </div>
                 </div>
             </div>
             <div class="item">
@@ -89,4 +126,8 @@
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block extra %}
+<script src="../../static/scripts/instrumentsScripts.js"></script>
 {% endblock %}
