--- a/app/templates/one_dataset.html
+++ b/app/templates/one_dataset.html
@@ -90,6 +90,29 @@
     </div>
 </div>
 
+<div class="ui styled fluid accordion">
+    <div class="title">
+        <i class="dropdown icon"></i>
+        <span class="header">Активность</span>
+    </div>
+
+    <div class="content">
+        <div class="ui two column stackable grid">
+            <div class="column">
+                <div class="ui header">Просмотры</div>
+                <canvas id="views-plot"></canvas>
+            </div>
+            <div class="column">
+                <div class="ui header">Загрузки</div>
+                <canvas id="downloads-plot"></canvas>
+            </div>
+        </div> 
+    </div>
+</div>
+{% endblock %}
+
+{% block extra %}
 <script src="{{ url_for('static', filename='scripts/datasetScripts.js') }}"></script>
+<script>createViewsDownloadsPlots("{{ dataset_activity.statistics }}")</script>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 {% endblock %}
