[UPD] add margin for activity

--- a/app/templates/one_dataset.html
+++ b/app/templates/one_dataset.html
@@ -111,7 +111,9 @@
     </div>
 </div>
 
-<div class="ui styled fluid accordion">
+<div class="ui divider"></div>
+
+<div class="ui styled fluid accordion" id="activity">
     <div class="title">
         <i class="dropdown icon"></i>
         <span class="header">Активность</span>
@@ -130,6 +132,7 @@
         </div> 
     </div>
 </div>
+<br>
 {% endblock %}
 
 {% block extra %}
