[FIX] misc fixes and updates

--- a/app/templates/one_dataset.html
+++ b/app/templates/one_dataset.html
@@ -113,7 +113,7 @@
 
 <div class="ui divider"></div>
 
-<div class="ui styled fluid accordion" id="activity">
+<div class="ui styled fluid accordion">
     <div class="title">
         <i class="dropdown icon"></i>
         <span class="header">Активность</span>
