--- a/app/templates/admin_panel.html
+++ b/app/templates/admin_panel.html
@@ -7,63 +7,64 @@
 {% endblock %}
 
 {% block content %}
-    <div class="ui styled fluid accordion">
-        <div class="title">
-                <i class="dropdown icon"></i>
-                <span class="header">Пользователи</span>
-        </div>
 
-        <div class="content">
-            <table id="users" class="ui celled table">
-                <thead>
-                    <tr>
-                        <th>Логин</th>
-                        <th>Имя пользователя</th>
-                        <th>Статус</th>
-                        <th>Создано наборов данных</th>
-                        <th>Дата создания аккаунта</th>
-                        <th>Дата изменения аккаунта</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for user in users %}
-                    <tr>
-                        <td>{{ user.login }}</td>
-                        <td>{{ user.username }}</td>
-                        {% if user.status == 0 %}
-                        <td>Администратор</td>
-                        {% elif user.status == 1 %}
-                        <td>Активен</td>
-                        {% else %}
-                        <td>Заблокирован</td>
-                        {% endif %}
-                        <td>{{ user.ds_count }}</td>
-                        <td>{{ user.creation_date }}</td>
-                        <td>{{ user.modify_date }}</td>
-                        <td>{{ user.modify_date }}</td>
-                        {% if user.status == 2 %}
-                        <td class="ui button" href="/unban/{{ user.user_id }}">Разблокировать</td>
-                        {% else %}
-                        <td class="ui {% if user.status == 0%}disabled{% endif %} button" href="/ban/{{ user.user_id }}">Заблокировать</td>
-                        {% endif %}
-                    </tr>
-                    {% endfor %}
-                </tbody>
-                <tfoot>
-                    <tr>
-                        <th>Логин</th>
-                        <th>Имя пользователя</th>
-                        <th>Статус</th>
-                        <th>Создано наборов данных</th>
-                        <th>Дата создания аккаунта</th>
-                        <th>Дата изменения аккаунта</th>
-                    </tr>
-                </tfoot>
-            </table>
-        </div>
-    </div>
+<div class="ui header">Пользователи</div>
+    
+<table id="users" class="ui celled table">
+    <thead>
+        <tr>
+            <th>Логин</th>
+            <th>Имя пользователя</th>
+            <th>Статус</th>
+            <th>Создано наборов данных</th>
+            <th>Дата создания аккаунта</th>
+            <th>Дата изменения аккаунта</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for user in users %}
+        <tr>
+            <td>{{ user.login }}</td>
+            <td>{{ user.username }}</td>
+            {% if user.status == 0 %}
+            <td>Администратор</td>
+            {% elif user.status == 1 %}
+            <td>Активен</td>
+            {% else %}
+            <td>Заблокирован</td>
+            {% endif %}
+            <td>{{ user.ds_count }}</td>
+            <td>{{ user.creation_date }}</td>
+            <td>{{ user.modify_date }}</td>
+            <td>
+            {% if user.status == 2 %}
+            <div class="ui button" onclick="unban('{{ user._id }}')">Разблокировать</div>
+            {% else %}
+            <div class="ui {% if user.status == 0%}disabled{% endif %} button" onclick="ban('{{ user._id }}')">Заблокировать</div>
+            {% endif %}
+            </td>
+        </tr>
+        {% endfor %}
+    </tbody>
+    <tfoot>
+        <tr>
+            <th>Логин</th>
+            <th>Имя пользователя</th>
+            <th>Статус</th>
+            <th>Создано наборов данных</th>
+            <th>Дата создания аккаунта</th>
+            <th>Дата изменения аккаунта</th>
+            <th></th>
+        </tr>
+    </tfoot>
+</table>
+
 {% endblock %}
 
 {% block extra %}
+<script src="https://cdn.datatables.net/2.3.0/js/dataTables.js"></script>
+<script src="https://cdn.datatables.net/2.3.0/js/dataTables.semanticui.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.9.2/semantic.min.js"></script>
 <script src="{{ url_for('static', filename='scripts/adminScripts.js') }}"></script>
 {% endblock %}
