--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Вход</title>
+    <title>Регистрация - Gakkle</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.3/dist/semantic.min.css">
     <style>
@@ -30,7 +30,7 @@
                     <i class="ui icon crow"></i> Gakkle
                 </a>
             </span>
-            Вход
+            Регистрация
         </h1>
 
         {% with messages = get_flashed_messages(with_categories=true) %}
@@ -46,18 +46,24 @@
 
         <form method="post">
           <div class="mb-2">
-            <input type="text" class="form-control" id="login" name="login" placeholder="Логин" required autofocus>
+            <input type="text" class="form-control" id="username" name="username" placeholder="Имя пользователя" required autofocus>
+          </div>
+          <div class="mb-2">
+            <input type="text" class="form-control" id="login" name="login" placeholder="Логин" required>
+          </div>
+          <div class="mb-2">
+            <input type="password" class="form-control" id="password" name="password" placeholder="Пароль" required>
           </div>
           <div class="mb-3">
-            <input type="password" class="form-control" id="password" name="password" placeholder="Пароль" required>
+            <input type="password" class="form-control" id="password_confirm" name="password_confirm" placeholder="Повторить пароль" required>
           </div>
 
           <div class="row g-2 mt-3">
             <div class="col">
-              <button class="w-100 btn btn-lg btn-dark" type="submit">Войти</button>
+              <a href="{{ url_for('auth.login') }}" class="w-100 btn btn-lg btn-dark" role="button">Отмена</a>
             </div>
             <div class="col">
-              <a href="{{ url_for('auth.register') }}" class="w-100 btn btn-lg btn-dark" role="button">Регистрация</a>
+              <button class="w-100 btn btn-lg btn-dark" type="submit">Подтвердить</button>
             </div>
           </div>
         </form>
