[UPD] Update client side

--- a/app/templates/all_datasets.html
+++ b/app/templates/all_datasets.html
@@ -93,6 +93,50 @@
                         </div>
                     </div>
 
+                    <!-- views -->
+                    <div class="column">
+                        <div class="ui form">
+                            <h5>Просмотры за последние 30 дней</h5>
+                            <div class="three fields">
+                                <div class="field">
+                                    <input type="number" placeholder="От" min="0" name="views-from">
+                                </div>
+                                <div class="field">
+                                    <input type="number" placeholder="До" min="0" name="views-to">
+                                </div>
+                                <div class="field">
+                                    <select class="ui dropdown" name="views-sort" id="views-sort">
+                                        <option value="">-</option>
+                                        <option value="asc">По возрастанию</option>
+                                        <option value="desc">По убыванию</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- downloads -->
+                    <div class="column">
+                        <div class="ui form">
+                            <h5>Скачивания за последние 30 дней</h5>
+                            <div class="three fields">
+                                <div class="field">
+                                    <input type="number" placeholder="От" min="0" name="downloads-from">
+                                </div>
+                                <div class="field">
+                                    <input type="number" placeholder="До" min="0" name="downloads-to">
+                                </div>
+                                <div class="field">
+                                    <select class="ui dropdown" name="downloads-sort" id="downloads-sort">
+                                        <option value="">-</option>
+                                        <option value="asc">По возрастанию</option>
+                                        <option value="desc">По убыванию</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                     <!-- creation date -->
                     <div class="column">
                         <div class="ui form">
