[REF]: button rename

--- a/app/templates/auth/profile.html
+++ b/app/templates/auth/profile.html
@@ -54,7 +54,7 @@
             <i class="save icon"></i> Сохранить изменения
         </button>
         <a class="ui button" href="{{ url_for('datasets.get_datasets') }}">
-            <i class="cancel icon"></i> Отмена
+            <i class="cancel icon"></i> Назад
         </a>
     </form>
 
