--- a/app/templates/one_dataset.html
+++ b/app/templates/one_dataset.html
@@ -176,6 +176,7 @@
 <script src="https://cdn.datatables.net/2.3.0/js/dataTables.js"></script>
 <script src="https://cdn.datatables.net/2.3.0/js/dataTables.semanticui.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.9.2/semantic.min.js"></script>
+<script>const perPage = Number.parseInt('{{ per_page_charts }}');</script>
 <script src="{{ url_for('static', filename='scripts/datasetScripts.js') }}"></script>
 <script>createViewsDownloadsPlots("{{ dataset_activity.statistics }}")</script>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
