[UPD] added notice for not having data for plots

--- a/app/templates/one_dataset.html
+++ b/app/templates/one_dataset.html
@@ -143,6 +143,8 @@
         <a class="item" onclick="previousPage()">Предыдущая</a>
         <a class="item" onclick="nextPage()">Следующая </a>
     </div>
+    {% else %}
+    <h3 class="ui center aligned header">Нет числовых признаков для построения графиков</h3>
     {% endif %}
 </div>
 
